[gd_scene load_steps=11 format=2]

[ext_resource path="res://GUI/TelegramLetter.gd" type="Script" id=1]
[ext_resource path="res://Assets/GUI_set05_Books_Letters_Scrolls_Papers_Notes_v1_1/uniqueElements_cropped/outline/letter_c4_outline.png" type="Texture" id=2]
[ext_resource path="res://Assets/GUI_set05_Books_Letters_Scrolls_Papers_Notes_v1_1/uniqueElements_cropped/outline/envelope_c4_outline.png" type="Texture" id=3]
[ext_resource path="res://Assets/kingthings-trypewriter-2/Kingthings Trypewriter 2.ttf" type="DynamicFontData" id=4]
[ext_resource path="res://Assets/saint_martyr/saintmartyrital.ttf" type="DynamicFontData" id=5]
[ext_resource path="res://Assets/input-prompts-pixel-16/Tilemap/tilemap_packed.png" type="Texture" id=6]
[ext_resource path="res://GUI/GUIClickPrompt.tres" type="Animation" id=7]

[sub_resource type="AtlasTexture" id=5]
atlas = ExtResource( 6 )
region = Rect2( 128, 32, 16, 16 )

[sub_resource type="DynamicFont" id=2]
size = 32
font_data = ExtResource( 5 )

[sub_resource type="DynamicFont" id=1]
size = 18
font_data = ExtResource( 4 )

[node name="TelegramLetter" type="Control"]
margin_right = 40.0
margin_bottom = 40.0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ClosedLetter" type="TextureButton" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -20.0
margin_top = -20.0
margin_right = 152.0
margin_bottom = 98.0
rect_scale = Vector2( 2, 2 )
texture_normal = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ClickPrompt" type="TextureRect" parent="ClosedLetter"]
visible = false
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -20.0
margin_top = -20.0
margin_right = 20.0
margin_bottom = 20.0
rect_pivot_offset = Vector2( 20, 20 )
texture = SubResource( 5 )
stretch_mode = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AnimationPlayer" type="AnimationPlayer" parent="ClosedLetter"]
anims/ClickPrompt = ExtResource( 7 )

[node name="OpenedLetter" type="TextureRect" parent="."]
visible = false
margin_right = 233.0
margin_bottom = 225.0
rect_scale = Vector2( 2, 2 )
texture = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Header" type="RichTextLabel" parent="OpenedLetter"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -114.5
margin_top = 11.0
margin_right = 219.5
margin_bottom = 47.0
rect_scale = Vector2( 0.5, 0.5 )
custom_colors/default_color = Color( 0.196078, 0.0745098, 0, 1 )
custom_fonts/normal_font = SubResource( 2 )
bbcode_enabled = true
bbcode_text = "[center]Signal Corps, United Stoneland Army[/center]"
text = "Signal Corps, United Stoneland Army"
scroll_active = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TelegramText" type="RichTextLabel" parent="OpenedLetter"]
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 3.0
margin_top = -190.0
margin_right = 97.0
margin_bottom = 191.0
rect_scale = Vector2( 0.5, 0.5 )
custom_colors/default_color = Color( 0.196078, 0.0745098, 0, 1 )
custom_fonts/normal_font = SubResource( 1 )
bbcode_enabled = true
bbcode_text = "[center][color=#822e24]URGENT TELEGRAM[/color][/center]

CMDR In Cheif
	Port Borish - FOB AC3
	
War declared on EVIL EMPIRE. 
Begin liberation at once. 
Prototype artillery has been assigned to your devision.

Eagles fly above you,

 Kommorah Blitouf"
text = "URGENT TELEGRAM

CMDR In Cheif
	Port Borish - FOB AC3
	
War declared on EVIL EMPIRE. 
Begin liberation at once. 
Prototype artillery has been assigned to your devision.

Eagles fly above you,

 Kommorah Blitouf"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Tween" type="Tween" parent="."]

[node name="LetterTarget" type="Control" parent="."]
margin_left = 1265.0
margin_top = -179.0
margin_right = 1305.0
margin_bottom = -139.0
rect_rotation = -34.1118
__meta__ = {
"_edit_use_anchors_": false
}

[node name="NextItemTimer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[node name="InputPromptDelay" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[connection signal="pressed" from="ClosedLetter" to="." method="_on_ClosedLetter_pressed"]
[connection signal="tween_all_completed" from="Tween" to="." method="_on_Tween_tween_all_completed"]
[connection signal="timeout" from="NextItemTimer" to="." method="_on_NextItemTimer_timeout"]
[connection signal="timeout" from="InputPromptDelay" to="." method="_on_InputPromptDelay_timeout"]
